--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+<link rel="stylesheet" href="libs//jquery.fancybox.css">
+<link rel="stylesheet" href="css/style.css">
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script src="libs/jquery.fancybox.js"></script>
@@ -9,9 +11,7 @@
 <script src="js/main.js"></script>
 
 
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="libs//jquery.fancybox.css">
+
 
 
 </head>
@@ -30,17 +30,17 @@
 <p class="subtitle">Telas Padrão </p>
     	<div id="tela1" class="telas">
 		<p>Abertura de módulo</p>
-		<img src="imgs/telas/padrao1.png" width="100px" class="telas-miniaturas" id="tela1"></img>
+		<img src="imgs/telas/padrao1.png" width="100px" class="telas-miniaturas" >
 		</div>
 
 		<div id="tela2" class="telas">
 		<p>Objetivos do módulo</p>
-		<img src="imgs/telas/padrao2.png" width="100px" class="telas-miniaturas" id="tela2"></img>
+		<img src="imgs/telas/padrao2.png" width="100px" class="telas-miniaturas" >
 		</div>
 
 		<div id="tela3" class="telas">
 		<p>Fechamento</p>
-		<img src="imgs/telas/padrao3.png" width="100px" class="telas-miniaturas" id="tela3"></img>
+		<img src="imgs/telas/padrao3.png" width="100px" class="telas-miniaturas" >
 		
 		</div>
 </div>
@@ -50,40 +50,40 @@
 <p class="subtitle">Telas de conteúdo</p>
 		
 
-		<div id="tela2" class="telas">
+		<div id="tela4" class="telas">
 		<p>Conteúdo Alinhado a esquerda</p>
-		<img src="imgs/telas/conteudo1.png" width="100px" class="telas-miniaturas" id="tela4"></img>
+		<img src="imgs/telas/conteudo1.png" width="100px" class="telas-miniaturas" >
 		</div>
 
-		<div id="tela2" class="telas">
+		<div id="tela5" class="telas">
 		<p>Conteúdo Alinhado a direita</p>
-		<img src="imgs/telas/conteudo2.png" width="100px" class="telas-miniaturas" id="tela5"></img>
+		<img src="imgs/telas/conteudo2.png" width="100px" class="telas-miniaturas" >
 		</div>
 
-		<div id="tela2" class="telas">
+		<div id="tela6" class="telas">
 		<p>Conteúdo Alinhado a esquerda c/ box</p>
-		<img src="imgs/telas/conteudo4.png" width="100px" class="telas-miniaturas" id="tela6"></img>
+		<img src="imgs/telas/conteudo4.png" width="100px" class="telas-miniaturas" >
 		</div>
 
-		<div id="tela2" class="telas">
+		<div id="tela7" class="telas">
 		<p>Conteúdo Alinhado a direita c/ box</p>
-		<img src="imgs/telas/conteudo3.png" width="100px" class="telas-miniaturas" id="tela7"></img>
+		<img src="imgs/telas/conteudo3.png" width="100px" class="telas-miniaturas" >
 		</div>
 </div>
         
 <div class="conjunto-telas">
         <p class="subtitle">Telas de Exercício</p>
 
-		<div id="tela3" class="telas">
+		<div id="tela8" class="telas">
 		<p>Preencher Lacunas</p>
-		<img src="imgs/telas/atividade1.png" width="100px" class="telas-miniaturas" id="tela8"></img>
+		<img src="imgs/telas/atividade1.png" width="100px" class="telas-miniaturas" >
 		
 			
 		</div>
 
-		<div id="tela2" class="telas">
+		<div id="tela9" class="telas">
 		<p>Múltipla-escolha</p>
-		<img src="imgs/telas/atividade2.png" width="100px" class="telas-miniaturas" id="tela9"></img>
+		<img src="imgs/telas/atividade2.png" width="100px" class="telas-miniaturas" >
 		</div>
 
 		
@@ -130,10 +130,45 @@
 </div>
 <div id="menu-opcoes">
 
+
 <button>Adicionar Tela</button>
 <button>Gerar Storyboard</button>
 <button>Gerar Estrutura</button>
 </div>
+
+<div id="ctn-t1" style="display:none;"> 1</div>
+<div id="ctn-t2" style="display:none;"> 2</div>
+<div id="ctn-t3" style="display:none;"> 3</div>
+<div id="ctn-t4" style="display:none;"> 4</div>
+<div id="ctn-t5" style="display:none;"> 5</div>
+<div id="ctn-t6" style="display:none;"> 6</div>
+<div id="ctn-t7" style="display:none;"> 7</div>
+<div id="ctn-t8" style="display:none;"> 8</div>
+<div id="ctn-t9" style="display:none;"> 9</div>
+<div id="ctn-t10" style="display:none;"> 10</div>
+<div id="ctn-t11" style="display:none;"> 11</div>
+<div id="ctn-t12" style="display:none;"> 12</div>
+<div id="ctn-t13" style="display:none;"> 13</div>
+<div id="ctn-t14" style="display:none;"> 14</div>
+<div id="ctn-t15" style="display:none;"> 15</div>
+<div id="ctn-t16" style="display:none;"> 16</div>
+<div id="ctn-t17" style="display:none;"> 17</div>
+<div id="ctn-t18" style="display:none;"> 18</div>
+<div id="ctn-t19" style="display:none;"> 19</div>
+<div id="ctn-t20" style="display:none;"> 20</div>
+<div id="ctn-t21" style="display:none;"> 21</div>
+<div id="ctn-t22" style="display:none;"> 22</div>
+<div id="ctn-t23" style="display:none;"> 23</div>
+<div id="ctn-t24" style="display:none;"> 24</div>
+<div id="ctn-t25" style="display:none;"> 25</div>
+<div id="ctn-t26" style="display:none;"> 26</div>
+<div id="ctn-t27" style="display:none;"> 27</div>
+<div id="ctn-t28" style="display:none;"> 28</div>
+<div id="ctn-t29" style="display:none;"> 29</div>
+<div id="ctn-t30" style="display:none;"> 30</div>
+<script type="text/javascript">
+
+</script>
 </body>
 
 <script>
