--- a/index.html
+++ b/index.html
@@ -27,10 +27,25 @@
 
 <div class="conjunto-telas">
     	<div id="tela1" class="telas">
-		<p>Abertura de módulo</p>
-		<img src="imgs/telas/padrao1.png" width="100px" class="telas-miniaturas" >
+		<p>Capa de curso  </p>
+		<img src="imgs/telas/abertura.png" width="100px" class="telas-miniaturas" >
 		</div>
-		
+
+		<div id="tela2" class="telas">
+		<p>Tutorial de Navegação</p>
+		<img src="imgs/telas/tutorial.png" width="100px" class="telas-miniaturas" >
+		</div>
+
+		<div id="tela3" class="telas">
+		<p>Objetivos do curso </p>
+		<img src="imgs/telas/objetivos_curso.png" width="100px" class="telas-miniaturas" >
+		</div>
+
+		<div id="tela4" class="telas">
+		<p>Capa módulo</p>
+		<img src="imgs/telas/capa_modulo.png" width="100px" class="telas-miniaturas" >
+		</div>
+				
 </div>
 
 
@@ -125,6 +140,9 @@
 
 
 </script>	
+
+
+
 
 
 </html>
