--- a/builder.html
+++ b/builder.html
@@ -24,26 +24,18 @@
 
 <div id="modelos-disponiveis">
 	
-	<div id="modelo1"  class="modelos-de-tela draggable"></div>
-	<div id="modelo2"  class="modelos-de-tela draggable"></div>
-	<div id="modelo3"  class="modelos-de-tela draggable"></div>
-	<div id="modelo4"  class="modelos-de-tela draggable"></div>
-	<div id="modelo5"  class="modelos-de-tela draggable"></div>
-	<div id="modelo6"  class="modelos-de-tela draggable"></div>
-	<div id="modelo7"  class="modelos-de-tela draggable"></div>
-	<div id="modelo8"  class="modelos-de-tela draggable"></div>
-	<div id="modelo9"  class="modelos-de-tela draggable"></div>
-	<div id="modelo10" class="modelos-de-tela draggable"></div>
-	<div id="modelo11" class="modelos-de-tela draggable"></div>
-	<div id="modelo12" class="modelos-de-tela draggable"></div>
-	<div id="modelo13" class="modelos-de-tela draggable"></div>
-	<div id="modelo14" class="modelos-de-tela draggable"></div>
-	<div id="modelo15" class="modelos-de-tela draggable"></div>
-	<div id="modelo16" class="modelos-de-tela draggable"></div>
-	<div id="modelo17" class="modelos-de-tela draggable"></div>
-	<div id="modelo18" class="modelos-de-tela draggable"></div>
-	<div id="modelo19" class="modelos-de-tela draggable"></div>
-	<div id="modelo20" class="modelos-de-tela draggable"></div>
+	<div id="modelo1"  class="modelos-de-tela draggable"><img src="imgs/telas/abertura_small.png"></div>
+	<div id="modelo2"  class="modelos-de-tela draggable"><img src="imgs/telas/conteudo1_small.png"></div>
+	<div id="modelo3"  class="modelos-de-tela draggable"><img src="imgs/telas/conteudo2_small.png"></div>
+	<div id="modelo4"  class="modelos-de-tela draggable"><img src="imgs/telas/conteudo3_small.png"></div>
+	<div id="modelo5"  class="modelos-de-tela draggable"><img src="imgs/telas/conteudo4_small.png"></div>
+	<div id="modelo6"  class="modelos-de-tela draggable"><img src="imgs/telas/conteudo5_small.png"></div>
+	<div id="modelo7"  class="modelos-de-tela draggable"><img src="imgs/telas/conteudo6_small.png"></div>
+	<div id="modelo8"  class="modelos-de-tela draggable"><img src="imgs/telas/conteudo7_small.png"></div>
+	<div id="modelo9"  class="modelos-de-tela draggable"><img src="imgs/telas/conteudo8_small.png"></div>
+	<div id="modelo10" class="modelos-de-tela draggable"><img src="imgs/telas/conteudo9_small.png"></div>
+
+
 
 </div>
 
@@ -80,6 +72,41 @@
 	<div id="drop30" class="drops"></div>
 </div>
 
+<!-- São Preenchidos dinamicamente -->
+<div id="conteudos-stb">
+	<div id="conteudo-tela1" class="conteudo-telas"></div>
+	<div id="conteudo-tela2" class="conteudo-telas"></div>
+	<div id="conteudo-tela3" class="conteudo-telas"></div>
+	<div id="conteudo-tela4" class="conteudo-telas"></div>
+	<div id="conteudo-tela5" class="conteudo-telas"></div>
+	<div id="conteudo-tela6" class="conteudo-telas"></div>
+	<div id="conteudo-tela7" class="conteudo-telas"></div>
+	<div id="conteudo-tela8" class="conteudo-telas"></div>
+	<div id="conteudo-tela9" class="conteudo-telas"></div>
+	<div id="conteudo-tela10" class="conteudo-telas"></div>
+	<div id="conteudo-tela11" class="conteudo-telas"></div>
+	<div id="conteudo-tela12" class="conteudo-telas"></div>
+	<div id="conteudo-tela13" class="conteudo-telas"></div>
+	<div id="conteudo-tela14" class="conteudo-telas"></div>
+	<div id="conteudo-tela15" class="conteudo-telas"></div>
+	<div id="conteudo-tela16" class="conteudo-telas"></div>
+	<div id="conteudo-tela17" class="conteudo-telas"></div>
+	<div id="conteudo-tela18" class="conteudo-telas"></div>
+	<div id="conteudo-tela19" class="conteudo-telas"></div>
+	<div id="conteudo-tela20" class="conteudo-telas"></div>
+	<div id="conteudo-tela21" class="conteudo-telas"></div>
+	<div id="conteudo-tela22" class="conteudo-telas"></div>
+	<div id="conteudo-tela23" class="conteudo-telas"></div>
+	<div id="conteudo-tela24" class="conteudo-telas"></div>
+	<div id="conteudo-tela25" class="conteudo-telas"></div>
+	<div id="conteudo-tela26" class="conteudo-telas"></div>
+	<div id="conteudo-tela27" class="conteudo-telas"></div>
+	<div id="conteudo-tela28" class="conteudo-telas"></div>
+	<div id="conteudo-tela29" class="conteudo-telas"></div>
+	<div id="conteudo-tela30" class="conteudo-telas"></div>
+	
+</div>
+
 <div id="controles">
 <button id="btn-salvar" class="btn waves-effect waves-light">Salvar Projeto</button>
 <button id="btn-limpar" class="btn waves-effect waves-light" >Limpar</button>
@@ -91,11 +118,13 @@
 </div>
 
 </div>
-<script>
-	
 
-</script>
 
+<div id="save-dialog" class="dialogs-basic">
+	<P>Deseja Salvar o Projeto?</P>
+	<button id="save-y" class="btn waves-effect waves-light">Sim</button>
+	<button id="save-n" class="btn waves-effect waves-light">Não</button>
+</div>
 </body>
 
 
