--- a/home.html
+++ b/home.html
@@ -32,19 +32,18 @@
 	<h3>Dados iniciais</h3>
 	
 
-	<label>Número da demanda:</label> <input type="text" name="FirstName" value=""><br>
-	<label>Nome do curso:</label> <input type="text" name="LastName" value=""><br>
-	<label>Módulo Nº:</label> <input type="text" name="LastName" value=""><br>
-	<label>Objetivo do Módulo: </label><input type="text" name="LastName" value="" rows="5"><br><br>
+	<label>Número da demanda:</label> <input type="text"  name="stb-demanda" value=""><br>
+	<label>Nome do curso:</label> <input type="text"      name="stb-curso" value=""><br>
+	<label>Módulo Nº:</label> <input type="text" 		  name="stb-modulo" value=""><br>
+	<label>Objetivo do Módulo: </label><input type="text" name="stb-objetivo" value="" rows="5"><br><br>
 	<label>Modelo:</label>
-    <select>
-    <option value="Abertura">Abertura</option>
-    <option value="Abertura">Intermediário</option>
-   <option value="Abertura">Fechamento</option>
-   <option value="Abertura">Vazio</option>
+    <select id="stb-modelo">
+    <option value="1">Abertura</option>
+    <option value="2">Intermediário</option>
+   <option value="3">Fechamento</option>
+   <option value="4">Vazio</option>
   </select><br><br>
 
-	
 
 <button id="volta_inicio" class="btn waves-effect waves-light" >Voltar</button>
 <button id="inicia_stb" class="btn waves-effect waves-light" >Começar!</button>
