--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
 <button id="btn_modelo" class="btn waves-effect waves-light btn-inicio" > Gerar modelo a partir de mapa de conteúdos</button><br><br>
 
 <p>v.1.0</p>
-<a href="notas.html">Notas da versão</a>
+
 </div>
 <div id="form_inicial">
 	<h3>Dados iniciais</h3>
@@ -34,20 +34,19 @@
 
 	<label>Número da demanda:</label> <input type="text"  name="stb-demanda" value=""><br>
 	<label>Nome do curso:</label> <input type="text"      name="stb-curso" value=""><br>
-	<label>Módulo Nº:</label> <input type="text" 		  name="stb-modulo" value=""><br>
+	<label>Módulo Nº:</label> <input type="text" 		      name="stb-modulo" value=""><br>
 	<label>Objetivo do Módulo: </label><input type="text" name="stb-objetivo" value="" rows="5"><br><br>
 	<label>Modelo:</label>
-    <select id="stb-modelo">
-    <option value="1">Abertura</option>
-    <option value="2">Intermediário</option>
-   <option value="3">Fechamento</option>
-   <option value="4">Vazio</option>
+  <select id="stb-modelo">
+  <option value="1">Abertura</option>
+  <option value="2">Intermediário</option>
+  <option value="3">Fechamento</option>
+  <option value="4">Vazio</option>
   </select><br><br>
 
 
 <button id="volta_inicio" class="btn waves-effect waves-light" >Voltar</button>
 <button id="inicia_stb" class="btn waves-effect waves-light" >Começar!</button>
-
 </div>
 
 </body>
@@ -56,4 +55,5 @@
 <link rel="stylesheet" href="css/style.css">
 <script src="js/Storyboard.js"></script>
 <script src="js/main.js"></script>
+<script src="js/modelo1.js"></script>
 </html>
