--- a/telas-reais/modelo1.html
+++ b/telas-reais/modelo1.html
@@ -1,28 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<script src="../js/jquery-3.1.1.slim.min.js"></script>
-<link rel="stylesheet" href="../css/style.css">
-<title>Modelo 1</title>
-</head>
-
-<body>
-   <!-- Modelo de tela 1-->
-	<div class="layout-container">
+   <!-- Modelo de tela 1 Capa de curso-->
+	<div class="layout-container" data-modelo="1">
 	<div id="capa-de-curso" class="telas">
 		
-		<h1 class="centralizado" contenteditable="true" id="element0">Bem-vindo ao curso<br> {{Nome do curso}}</h1>
-		<p class="centralizado" contenteditable="true" id="element1">Neste curso, você vai {{Objetivo do curso}}<br><br><br>
+		<h1 class="centralizado" contenteditable="true" id="M1element0">Bem-vindo ao curso<br> {{Nome do curso}}</h1>
+		<p class="centralizado" contenteditable="true" id="M1element1">Neste curso, você vai {{Objetivo do curso}}<br><br><br>
 		</p>
-		<button id="btnHome"class="centralizado" onclick="logDeMontagem();">Iniciar curso</button>			
+		<button id="btnHome" class="centralizado" >Iniciar curso</button>			
 
 	</div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
+		<p contenteditable="true"  id="M1element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="element3">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:{{id da imagem}} </p>
+		<p contenteditable="true"  id="M1element3">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:{{id da imagem}} </p>
 		
 	</div>
 
@@ -30,12 +20,7 @@
 	<button>Salvar</button>
 
 	</div>
-<script src="../js/html2table.js"></script>
-<script src="../js/main.js"></script>	
-</body>
-
-
-</html>
+<script src="js/html2table.js"></script>
 
 
 
