--- a/builder.html
+++ b/builder.html
@@ -27,16 +27,17 @@
 
 <div id="modelos-disponiveis">
 	
-	<div id="modelo0"  class="modelos-de-tela draggable"><img src="imgs/telas/abertura_small.png"></div>
-	<div id="modelo1"  class="modelos-de-tela draggable"><img src="imgs/telas/conteudo1_small.png"></div>
-	<div id="modelo2"  class="modelos-de-tela draggable"><img src="imgs/telas/conteudo2_small.png"></div>
-	<div id="modelo3"  class="modelos-de-tela draggable"><img src="imgs/telas/conteudo3_small.png"></div>
-	<div id="modelo4"  class="modelos-de-tela draggable"><img src="imgs/telas/conteudo4_small.png"></div>
-	<div id="modelo5"  class="modelos-de-tela draggable"><img src="imgs/telas/conteudo5_small.png"></div>
-	<div id="modelo6"  class="modelos-de-tela draggable"><img src="imgs/telas/conteudo6_small.png"></div>
-	<div id="modelo7"  class="modelos-de-tela draggable"><img src="imgs/telas/conteudo7_small.png"></div>
-	<div id="modelo8"  class="modelos-de-tela draggable"><img src="imgs/telas/conteudo8_small.png"></div>
-	<div id="modelo9" class="modelos-de-tela draggable"><img src="imgs/telas/conteudo9_small.png"></div>
+
+	<div id="modelo0"  class="modelos-de-tela draggable"><p class="label-telas">Abertura de curso</p><img src="imgs/telas/abertura_small.png"></div>
+	<div id="modelo1"  class="modelos-de-tela draggable"><p class="label-telas">Tutorial de Navegação</p><img src="imgs/telas/conteudo1_small.png"></div>
+	<div id="modelo2"  class="modelos-de-tela draggable"><p class="label-telas">Abertura de Módulo</p><img src="imgs/telas/conteudo2_small.png"></div>
+	<div id="modelo3"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 1</p><img src="imgs/telas/conteudo3_small.png"></div>
+	<div id="modelo4"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 2</p><img src="imgs/telas/conteudo4_small.png"></div>
+	<div id="modelo5"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 3</p><img src="imgs/telas/conteudo5_small.png"></div>
+	<div id="modelo6"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 4</p><img src="imgs/telas/conteudo6_small.png"></div>
+	<div id="modelo7"  class="modelos-de-tela draggable"><p class="label-telas">Atividade 1</p><img src="imgs/telas/conteudo7_small.png"></div>
+	<div id="modelo8"  class="modelos-de-tela draggable"><p class="label-telas">Atividade 2</p> <img src="imgs/telas/conteudo8_small.png"></div>
+	<div id="modelo9" class="modelos-de-tela draggable"><p class="label-telas">Encerramento</p><img src="imgs/telas/conteudo9_small.png"></div>
 
 
 
