--- a/telas-reais/modelo0.html
+++ b/telas-reais/modelo0.html
@@ -5,23 +5,29 @@
 		<h1 class="centralizado" contenteditable="true" id="M0element0">Bem-vindo ao curso<br> {{Nome do curso}}</h1>
 		<p class="centralizado" contenteditable="true" id="M0element1">Neste curso, você vai {{Objetivo do curso}}<br><br><br>
 		</p>
-		<button id="btnHome" class="centralizado" >Iniciar curso</button>			
+		
+		<div class="btn-alinhamento"><button id="btnHome" class="button" >Iniciar curso</button></div>			
 
 	</div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
 		<p contenteditable="true"  id="M0element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M0element3">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:{{id da imagem}} </p>
+		<p contenteditable="true"  id="M0element3">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
 		
 	</div>
 
-	<button>Voltar</button>
-	<button>Salvar</button>
+
 
 	</div>
-<script src="js/html2table.js"></script>
+<script>
+	
+$("#capa-de-curso").click(function(){
+console.log($("#id-shutter").html());
 
+});
+
+</script>
 
 
 
